--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon index.js --ignore client",
-    "start": "node index"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
